Added BeerRepository, method to BeerController, changed data loading on startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8080
+koz.brewery.beer-inventory-service-host=http://localhost:8082
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+#spring.datasource.initialization-mode=EMBEDDED
