--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ koz.brewery.beer-inventory-service-host=http://localhost:8082
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 #spring.datasource.initialization-mode=EMBEDDED
+spring.cache.jcache.config=classpath:ehcache.xml
