Adding mysql config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8080
 koz.brewery.beer-inventory-service-host=http://localhost:8082
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.defer-datasource-initialization=true
-#spring.datasource.initialization-mode=EMBEDDED
 spring.cache.jcache.config=classpath:ehcache.xml
+spring.profiles.active=localmysql
+#spring.datasource.username=beer_service
+#spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://localhost:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.jpa.database=mysql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
