Adding jms config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.profiles.active=localmysql
 #spring.jpa.database=mysql
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
