--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,11 @@ spring.profiles.active=localmysql
 #spring.jpa.database=mysql
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+#spring.artemis.user=admin
+#spring.artemis.password=admin
+
+logging.level.org.kozlowski=debug
